0.6.1:
	* Add 'addFileExtension' function and its operator form: (<.>).

0.6.0:

	* Deprecate PathParseException and rename it to PathException
	* Allow 'parent' to work on relative paths as well
	* Deprecate isParentOf and stripDir and rename them to isProperPrefixOf and
	  stripProperPrefix respectively.
	* Allow "." as a valid relative dir path with the following rules:
		* "./" </> "./" = "./"
		* "./" </> "x/" = "x/"
		* "x/" </> "./" = "x/"
		* dirname "x" = "./"
		* dirname "/" = "./"
		* dirname "./" = "./"
	* Make dirname return "." instead of "/" (fixes #18).
	* Remove the 'validity' flag.
	* Add synonym for setFileExtension in the form of an operator: (-<.>).

0.5.13:
	* Add QuasiQuoters absdir, reldir, absfile, relfile
0.5.11:
	* Add replaceExtension and fileExtension

0.5.10:
	* Disallow /. for absolute file
	* Disallow foo/. for relative file

0.5.9:
	* Lifted ~ restriction from parser https://github.com/chrisdone/path/issues/19
0.5.8
	* Add Aeson instances.

0.5.7:
	* Fix haddock problem.
0.5.6:
	* Reject only .. and .
0.5.5:
	* Use filepath's isValid function for additional sanity checks
0.5.4:
	* Disable parsing of path consisting only of "."
	* Add NFData instance for Path
	* Some typo/docs improvements
	* Add standard headers to modules
0.5.3:
	* Added conversion functions.

0.2.0:

	* Rename parentAbs to simply parent.
	* Add dirname.

0.3.0:
	* Removed Generic instance.

0.4.0:
	* Implemented stricter parsing, disabling use of "..".
	* Made stripDir generic over MonadThrow

0.5.0:
	* Fix stripDir p p /= Nothing bug.

0.5.2:
	* Removed unused DeriveGeneric.