@@ -194,7 +194,7 @@ operationAddFileExtension = do
   it "adds extension with dot after dot" $
     $(mkRelFile "foo.") <.> ".bar"
       `shouldReturn` $(mkRelFile "foo..bar")
-  it "adds extension without after dot" $
+  it "adds extension without dot after dot" $
     $(mkRelFile "foo.") <.> "bar"
       `shouldReturn` $(mkRelFile "foo..bar")
   it "adds extension with separator" $  -- I'm not sure it's okay
@@ -204,11 +204,11 @@ operationAddFileExtension = do
     $(mkRelFile "foo.bar/baz") <.> "txt"
       `shouldReturn` $(mkRelFile "foo.bar/baz.txt")
   it "throws InvalidRelFile extension if extenstion ends with /" $
-    $(mkRelFile "foo") <.> "evil/" -- No Eq instance for PathException
-      `shouldThrow` (\case {InvalidRelFile "foo.evil/" -> True; _ -> False})
+    $(mkRelFile "foo") <.> "evil/"
+      `shouldThrow` (== InvalidRelFile "foo.evil/")
   it "throws InvalidAbsFile extension if extenstion ends with /" $
     $(mkAbsFile "/home/cfg") <.> "txt/" -- No Eq instance for PathException
-      `shouldThrow` (\case {InvalidAbsFile "/home/cfg.txt/" -> True; _ -> False})
+      `shouldThrow` (== InvalidAbsFile "/home/cfg.txt/")
 
 operationSetFileExtension :: Spec
 operationSetFileExtension = do
